⚽️🏙 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -20,47 +20,51 @@
   </header>
   <aside>
     <p>These tools add features to the Compass school manager platform. All work is performed on your device and school data is only transferred between your device and Compass.</p>
-    <p>Drag a button to your Bookmarks Bar. Click it when you’re on a class page in Compass.</p>
+    <p>Drag a <code>button</code> to your Bookmarks Bar. Click it when you’re on a class page in Compass.</p>
     <p>If your Bookmarks Bar is not visible, go to <kbd>Menu &gt; Bookmarks &gt; Show Bookmarks Bar</kbd>.</p>
   </aside>
   <section>
-    <h2>Class Dashboard</h2>
-    <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fscreenshot.png?v=1564465058228" width="640"/>
+    <div class="hero">
+      <h2>Class Dashboard</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fclass-dashboard.png?v=1596947812372"/>
+    </div>
     <p>View summary data about a class.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/class-dashboard.js';})();" class="button">Class Dashboard</a>
-    <span>← drag this button to your Bookmarks Bar.</span>
-    <div class="note">↑   Click & drag up to your Bookmarks Bar.</div>
   </section>
   <section>
-    <h2>Classroom Mixer-upper-er</h2>
-    <p>Automate class groupings.</p>
+    <div class="hero">
+      <h2>Classroom Mixer-upper-er</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fmixer-upper-er.png?v=1596947812595"/>
+    </div>
+    <p>Automate class groupings. Based on the work of Peter Cox (2009).</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/mixer-upper-er.js';})();" class="button">Mixer-upper-er</a>
-    <span>← drag this button to your Bookmarks Bar.</span>
-    <div class="note">↑   Click & drag up to your Bookmarks Bar.</div>
   </section>
   <section>
-    <h2>Reports Check</h2>
+    <div class="hero">
+      <h2>Reports Check</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Freports-check.png?v=1596957497273"/>
+    </div>
     <p>Check reports for missing elements automatically.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/reports-check.js';})();" class="button">Reports Check</a>
-    <span>← drag this button to your Bookmarks Bar.</span>
-    <div class="note">↑   Click & drag up to your Bookmarks Bar.</div>
   </section>
   <section>
-    <h2>Guess Who?</h2>
+    <div class="hero">
+      <h2>Guess Who?</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fguess-who.png?v=1596957466752"/>
+    </div>
     <p>Play a game of <em>Guess Who?</em> with a class.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/guess-who.js';})();" class="button">Guess Who?</a>
-    <span>← drag this button to your Bookmarks Bar.</span>
-    <div class="note">↑   Click & drag up to your Bookmarks Bar.</div>
   </section>
   <section>
-    <h2>Birthdays</h2>
-    <p>Lists all the birthdays on a given day and plots the number per day.</p>
+    <div class="hero">
+      <h2>Birthdays</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fbirthdays.png?v=1596947812098"/>
+    </div>
+    <p>Lists all the birthdays on a given day and plots the number per day for the year.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/birthdays.js';})();" class="button">Birthdays</a>
-    <span>← drag this button to your Bookmarks Bar.</span>
-    <div class="note">↑   Click & drag up to your Bookmarks Bar.</div>
   </section>
   <footer>
-    <p>👨🏻‍💻 Email Andrew Kerr for support. </p>
+    <p>👨🏻‍💻 Email Andrew Kerr for support. 🎏 Made with <a href="https://glitch.com">Glitch</a>. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>.</p>
   </footer>
 </body>
 </html>
