😳☘️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
     <p>Lists all the birthdays on a given day and plots the number per day for the year.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/birthdays.js';})();" class="button">Birthdays</a>
   </section>
+  <h1>
+    Experimental Tools
+  </h1>
+  <section>
+    <div class="hero">
+      <h2>Class List Export</h2>
+    </div>
+    <p><b>In testing!</b> Export all enrolments as CSV for <a href="https://help.educationperfect.com/article/56-how-do-i-enrol-my-classes">Education Perfect</a>.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/class-export-csv.js';})();" class="button">Class List Export</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Lesson Plan/Teacher Notes Export</h2>
+    </div>
+    <p><b>In testing!</b> View all plans/notes for a class for export.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/notes-export.js';})();" class="button">Notes Export</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Transpose Rubrics</h2>
+    </div>
+    <p><b>In testing!</b> Transposes rubric grading components from horizontal to vertical, with criteria in columns.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/transpose.js';})();" class="button">Transpose Rubrics</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Pivot Data</h2>
+    </div>
+    <p><b>In testing!</b> View data in a pivot table or graph.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/pivot.js';})();" class="button">Pivot Data</a>
+  </section>
   <footer>
     <p>👨🏻‍💻 Email Andrew Kerr for support. 🎏 Made with <a href="https://glitch.com">Glitch</a>. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>.</p>
   </footer>
