Report check updates

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
   </section>
   <section>
     <div class="hero">
-      <h2>Classroom Mixer-upper-er</h2>
-      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fmixer-upper-er.png?v=1596947812595"/>
-    </div>
-    <p>Automate class groupings. Based on the work of Peter Cox (2009).</p>
-    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/mixer-upper-er.js';})();" class="button">Mixer-upper-er</a>
-  </section>
-  <section>
-    <div class="hero">
       <h2>Reports Check</h2>
       <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Freports-check.png?v=1596957497273"/>
     </div>
     <p>Check reports for missing elements automatically.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/reports-check.js';})();" class="button">Reports Check</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Classroom Mixer-upper-er</h2>
+      <img src="https://cdn.glitch.com/2fe33dc2-b8a2-4316-84b6-b18d9b7e14ea%2Fmixer-upper-er.png?v=1596947812595"/>
+    </div>
+    <p>Automate class groupings. Based on the work of Peter Cox (2009).</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/mixer-upper-er.js';})();" class="button">Mixer-upper-er</a>
   </section>
   <section>
     <div class="hero">
@@ -63,9 +63,8 @@
     <p>Lists all the birthdays on a given day and plots the number per day for the year.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/birthdays.js';})();" class="button">Birthdays</a>
   </section>
-  <h1>
-    Experimental Tools
-  </h1>
+  <details>
+    <summary>Experimental Tools</summary>
   <section>
     <div class="hero">
       <h2>Class List Export</h2>
@@ -94,6 +93,7 @@
     <p><b>In testing!</b> View data in a pivot table or graph.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/pivot.js';})();" class="button">Pivot Data</a>
   </section>
+  </details>
   <footer>
     <p>👨🏻‍💻 Email Andrew Kerr for support. 🎏 Made with <a href="https://glitch.com">Glitch</a>. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>.</p>
   </footer>
