Added MIT License

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </section>
   </details>
   <footer>
-    <p>👨🏻‍💻 Email Andrew Kerr for support. 🎏 Made with <a href="https://glitch.com">Glitch</a>. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>.</p>
+    <p>👨🏻‍💻 By Andrew Kerr. 🎏 Made with <a href="https://glitch.com">Glitch</a>. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>. MIT License.</p>
   </footer>
 </body>
 </html>
