🚿🧆 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
     <p>Lists all the birthdays on a given day and plots the number per day for the year.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/birthdays.js';})();" class="button">Birthdays</a>
   </section>
+  <section>
+    <div class="hero">
+      <h2>Lesson Plan Presenter</h2>
+    </div>
+    <p><b>In testing!</b> Toggles zooming the current lesson plan to fill the window for presenting.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/lesson-presenter.js';})();" class="button">Lesson Presenter</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Certificate Creator</h2>
+    </div>
+    <p><b>In testing!</b> Create excellence and endeavour certificates for a report cycle.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/certificates.js';})();" class="button">Certificate Creator</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Graduation Certificates</h2>
+    </div>
+    <p><b>In testing!</b> Create graduation certificates based on the Crusoe Year 10 Graduation Rubric.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/graduation.js';})();" class="button">Graduation Certificates</a>
+  </section>
   <details>
     <summary>Experimental Tools</summary>
   <section>
@@ -74,10 +95,24 @@
   </section>
   <section>
     <div class="hero">
+      <h2>Class List PDF</h2>
+    </div>
+    <p><b>In testing!</b> Create a class list PDF.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/class-list.js';})();" class="button">Class List PDF</a>
+  </section>
+  <section>
+    <div class="hero">
       <h2>Lesson Plan/Teacher Notes Export</h2>
     </div>
     <p><b>In testing!</b> View all plans/notes for a class for export.</p>
     <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/notes-export.js';})();" class="button">Notes Export</a>
+  </section>
+  <section>
+    <div class="hero">
+      <h2>Reports Curriculum Coverage</h2>
+    </div>
+    <p><b>In testing!</b> Check which Victorian Curriculum strands are reported by which subjects.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/reports-vc-strand-coverage.js';})();" class="button">Reports Curriculum Coverage</a>
   </section>
   <section>
     <div class="hero">
