Added Attendance Summary

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
     <summary>Experimental Tools</summary>
   <section>
     <div class="hero">
+      <h2>Attendance Summary</h2>
+    </div>
+    <p><b>In testing!</b> Calculate school approved attendance %, by form/year/house, for this week compared to the year to date.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/attendance.js';})();" class="button">Class List Export</a>
+  </section>
+  <section>
+    <div class="hero">
       <h2>Class List Export</h2>
     </div>
     <p><b>In testing!</b> Export all enrolments as CSV for <a href="https://help.educationperfect.com/article/56-how-do-i-enrol-my-classes">Education Perfect</a>.</p>
