Improved attendance conditional highlighting

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
   </section>
   <section>
     <div class="hero">
+      <h2>Attendance Summary</h2>
+    </div>
+    <p><b>In testing!</b> Calculate school approved attendance %, by form/year/house, for this week compared to the year to date.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/attendance.js';})();" class="button">Attendance Summary</a>
+  </section>
+  <section>
+    <div class="hero">
       <h2>Unmarked Rolls</h2>
     </div>
     <p><b>In testing!</b> Find any unmarked rolls even when intelligent marking is used.</p>
@@ -93,13 +100,6 @@
   </section>
   <details>
     <summary>Experimental Tools</summary>
-  <section>
-    <div class="hero">
-      <h2>Attendance Summary</h2>
-    </div>
-    <p><b>In testing!</b> Calculate school approved attendance %, by form/year/house, for this week compared to the year to date.</p>
-    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/attendance.js';})();" class="button">Class List Export</a>
-  </section>
   <section>
     <div class="hero">
       <h2>Class List Export</h2>
