added Attendance by class by date

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
   </section>
   <section>
     <div class="hero">
+      <h2>Attendance by Class</h2>
+    </div>
+    <p><b>In testing!</b> Show class attendance per day.</p>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.glitch.me/attendance-class.js';})();" class="button">Attendance by Class</a>
+  </section>
+  <section>
+    <div class="hero">
       <h2>Unmarked Rolls</h2>
     </div>
     <p><b>In testing!</b> Find any unmarked rolls even when intelligent marking is used.</p>
