Migrate to compass.learnding.au

--- a/esc/index.html
+++ b/esc/index.html
@@ -141,7 +141,7 @@ document.addEventListener('DOMContentLoaded', event => {
 })
 </script>
 </head>
-<body onload="check();">
+<body>
   <header>
     <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 200 200" width="48px" height="48px">
       <defs>
@@ -151,7 +151,7 @@ document.addEventListener('DOMContentLoaded', event => {
       <path class="cls" d="M97.65,117l.14-.16.14-.16.13-.17.13-.17.12-.17c0-.06.08-.12.12-.17a1.88,1.88,0,0,0,.12-.18l.12-.18.11-.18.11-.19.1-.18a1.74,1.74,0,0,0,.1-.19l.1-.19.09-.19.09-.2a1.19,1.19,0,0,0,.08-.2l.09-.2c0-.06,0-.13.07-.2l.08-.2.06-.21a1.59,1.59,0,0,0,.07-.2l.06-.21.06-.21s0,0,0-.06l4.78-17.44L87.21,100h0l-.2,0-.22.06-.2.07-.21.07-.2.07-.2.08-.2.08-.2.09-.19.09-.2.09-.18.1-.2.1-.18.1-.18.11-.18.12-.18.11-.18.12-.17.12-.17.13a1.09,1.09,0,0,0-.17.13l-.16.13-.17.14-.16.14-.16.14-.15.14-.15.15-.15.16-.14.15a1.07,1.07,0,0,0-.14.16l-.15.16a1.83,1.83,0,0,1-.13.16l-.13.17a1.83,1.83,0,0,0-.13.16l-.13.18-.12.17-.12.18-.11.18a1.74,1.74,0,0,0-.11.18l-.11.18-.11.19-.09.19a1.14,1.14,0,0,0-.1.19l-.09.19-.09.2-.09.19c0,.07,0,.14-.08.2s0,.14-.08.2,0,.14-.07.21,0,.13-.07.2l-.06.21-.06.21-.06.21a.43.43,0,0,1,0,0L74.91,125l17.52-4.8h0l.21-.06.21-.06.21-.06.21-.07.2-.08.2-.07.2-.09.2-.08.19-.09.19-.1.19-.09.19-.1.19-.11.18-.11.18-.11.18-.11.17-.12.18-.13.17-.12.17-.13.16-.13.17-.14.15-.14.16-.14.16-.15.15-.15.15-.15.14-.15Z"/>
       <path class="cls" d="M89.8,55.77c-.62,0-1.23,0-1.85,0h-.27c-.54,0-1.08,0-1.61.09h-.2c-1.26.1-2.5.23-3.74.4h0c-1.63.23-3.24.53-4.83.91a1.87,1.87,0,0,1-.4,0A1.7,1.7,0,0,1,75.26,56l-2.6-9.73a1.71,1.71,0,0,1,1.24-2.1,66.92,66.92,0,0,1,7.48-1.35h0l.39,0,1.41-.15.65-.06,1.34-.1.68-.05,1.36-.06.64,0h.26l1.69,0h0c.57,0,1.13,0,1.69,0h.27l.63,0,1.36.06.68.05,1.34.1.65.06,1.41.15.39,0h0a66.52,66.52,0,0,1,7.48,1.35,1.71,1.71,0,0,1,1.25,2.1L104.34,56a1.7,1.7,0,0,1-1.64,1.26,1.72,1.72,0,0,1-.39,0c-1.6-.38-3.21-.68-4.84-.91h0c-1.24-.17-2.48-.3-3.73-.4h-.2l-1.62-.09h-.27c-.62,0-1.23,0-1.85,0Z"/>
     </svg>
-    <h1><a href="https://compass.education">Compass</a> Power Tools for <span style="color: #CF2E26">WCB</span></h1>
+    <h1><a href="https://compass.education">Compass</a> Power Tools for <span style="color: #4EABEA">ESC</span></h1>
   </header>
   <aside>
     <p>These tools add features to the Compass school manager platform. All work is performed on your device and school data is only transferred between your device and Compass.</p>
@@ -164,7 +164,7 @@ document.addEventListener('DOMContentLoaded', event => {
       <img src="/reports-check.png"/>
     </div>
     <p>Check reports for missing elements automatically.</p>
-    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.learnding.au/wcb/reports-check.js';})();" class="button">Reports Check</a>
+    <a href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='https://compass.learnding.au/esc/reports-check.js';})();" class="button">Reports Check</a>
   </section>
   <footer>
     <p>👨🏻‍💻 By Andrew Kerr. 🐙 Code on <a href="https://github.com/drewkerr/compass">GitHub</a>. MIT License.</p>
